--- a/_posts/2022-10-05-00-20.md
+++ b/_posts/2022-10-05-00-20.md
@@ -6,7 +6,6 @@ vimeo: 792165400
 ---
 
 
-Petit exercice de deuxième année à La Poudrière réalisé en une semaine.
-Thématique : le film de genre - thriller politique.
+Petit exercice de deuxième année à La Poudrière réalisé en une semaine sur la thématique du film de genre.
 
 Musique de Titouan Gramain (merci à lui !)
